<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>cea.streamer</groupId>
	<artifactId>streamer</artifactId>
	<version>1.0.0</version>
	<packaging>jar</packaging>

	<name>STREAMER</name>

	<developers>
		<developer>
			<id> sgr </id>
			<name> Sandra Garcia Rodriguez </name>
			<email> sandra.garciarodriguez@cea.fr </email>
			<roles>
				<role>Research Engineer</role>
			</roles>
		</developer>
		<developer>
			<id> ma </id>
			<name> Mohammad ALSHAER </name>
			<email> mohammad.alshaer@cea.fr </email>
			<roles>
				<role>Data Scientist Postdoctoral (R+D)</role>
			</roles>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-to-slf4j</artifactId>
            <version>2.14.1</version>
        </dependency>
		<dependency>
			<groupId>org.apache.maven.plugin-tools</groupId>
			<artifactId>maven-plugin-annotations</artifactId>
			<version>3.6.0</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>			
		<dependency>
			<groupId>org.apache.kafka</groupId>
			<artifactId>kafka-clients</artifactId>
			<version>2.7.0</version>
		</dependency>		
		<dependency>
			<groupId>org.apache.kafka</groupId>
			<artifactId>kafka-streams</artifactId>
			<version>2.7.0</version>
		</dependency> 		
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>19.0</version>
		</dependency>
		<dependency>
			<groupId>org.hdrhistogram</groupId>
			<artifactId>HdrHistogram</artifactId>
			<version>2.1.8</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.5.1</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.32</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.32</version>
		</dependency>
		<dependency>
			<groupId>org.influxdb</groupId>
			<artifactId>influxdb-java</artifactId>
			<version>2.22</version>
		</dependency>
		<dependency>
			<groupId>org.rosuda.REngine</groupId>
			<artifactId>REngine</artifactId>
			<version>2.1.0</version>
		</dependency>
		<dependency>
			<groupId>org.renjin</groupId>
			<artifactId>renjin-script-engine</artifactId>
			<version>RELEASE</version>
		</dependency>
		<dependency>
			<groupId>redis.clients</groupId>
			<artifactId>jedis</artifactId>
			<version>3.7.0</version>		
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.github.lucarosellini.rJava</groupId>
			<artifactId>REngine</artifactId>
			<version>0.9-7</version>
		</dependency>
		<dependency>
			<groupId>com.github.lucarosellini.rJava</groupId>
			<artifactId>JRI</artifactId>
			<version>0.9-7</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
			<version>1.1.1</version>
		</dependency>
		<dependency>
			<groupId>org.rosuda.REngine</groupId>
			<artifactId>Rserve</artifactId>
			<version>1.8.1</version>
		</dependency>
		<dependency>
			<groupId>nz.ac.waikato.cms.weka</groupId>
			<artifactId>weka-stable</artifactId>
			<version>3.6.6</version>
		</dependency>
		<dependency>
			<groupId>org.renjin.cran</groupId>
			<artifactId>caret</artifactId>
			<version>6.0-24-b14</version>
		</dependency>
		<dependency>
			<groupId>org.renjin.cran</groupId>
			<artifactId>e1071</artifactId>
			<version>1.6-8-b4</version>
		</dependency>
		<dependency>
			<groupId>org.renjin.cran</groupId>
			<artifactId>kernlab</artifactId>
			<version>0.9-24-b28</version>
		</dependency>
		<dependency>
			<groupId>net.rationalminds</groupId>
			<artifactId>DateParser</artifactId>
			<version>0.3.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.directory.studio</groupId>
			<artifactId>org.apache.commons.io</artifactId>
			<version>2.4</version>
		</dependency>
		<dependency>
			<groupId>org.elasticsearch.client</groupId>
			<artifactId>elasticsearch-rest-high-level-client</artifactId>
			<version>7.15.0</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.10.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-model</artifactId>
			<version>3.3.9</version>
		</dependency>
	</dependencies>

	<repositories>
		<repository>
			<id>bedatadriven</id>
			<name>bedatadriven public repo</name>
			<url>https://nexus.bedatadriven.com/content/groups/public/</url>
		</repository>
		<repository>
			<id>confluent</id>
			<url>http://packages.confluent.io/maven/</url>
		</repository>
	</repositories>

	<build>
		<!-- <resources> <resource> <directory>src/main/resources/</directory> 
			<excludes> <exclude>**</exclude> </excludes> </resource> </resources> -->
		<plugins>
			<!-- we want JDK 1.6 source and binary compatiblility -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<!-- any other plugins -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<descriptors>
						<descriptor>src/main/assembly/test-jar-with-dependencies.xml</descriptor>
					</descriptors>
					<!-- <descriptorRefs> <descriptorRef>jar-with-dependencies</descriptorRef> 
						</descriptorRefs> -->
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
